--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-fake-api",
-  "version": "1.0.5",
+  "version": "1.1.1",
   "description": "API manager for react apps",
-  "author": "Andrey M <opossum4eg@gmail.com>",
+  "author": "opossum4eg@gmail.com",
   "keywords": [
     "react",
     "react.js",
@@ -10,66 +10,95 @@
     "fetch",
     "url"
   ],
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/types/index.d.ts",
+  "main": "cjs/index.js",
+  "module": "esm/index.js",
+  "types": "esm/index.d.ts",
   "scripts": {
-    "build": "rollup -c"
+    "storybook": "storybook dev",
+    "prettier-format": "prettier src/**/*.{ts,tsx} --write",
+    "lint": "eslint src --resolve-plugins-relative-to . src --ext ts,tsx --fix",
+    "lint-push": "eslint --max-warnings=0 src --resolve-plugins-relative-to . --ext ts,tsx --fix",
+    "prebuild": "yarn run lint",
+    "build": "rollup -c",
+    "pub": "cd dist && npm publish",
+    "postpub": "cd dist && del package.json",
+    "postinstall": "husky",
+    "prepare": "husky"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@modular-css/rollup": "^27.0.3",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-strip": "^2.1.0",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@types/lodash-es": "^4.17.6",
-    "@types/node": "^17.0.18",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "autoprefixer": "^10.4.2",
-    "node-sass": "^7.0.1",
-    "postcss": "^8.4.5",
+    "@babel/core": "^7.24.0",
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@modular-css/rollup": "^29.0.5",
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-strip": "^3.0.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@storybook/cli": "^7.6.17",
+    "@storybook/preset-create-react-app": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-webpack5": "^7.6.17",
+    "@types/lodash-es": "^4.17.12",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.20",
+    "@types/rollup-plugin-peer-deps-external": "^2",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "is-plain-object": "^5.0.0",
+    "node-sass": "^9.0.0",
+    "postcss": "^8.4.35",
     "postcss-clean": "^1.2.2",
-    "rollup": "^2.66.1",
+    "prettier": "^3.2.5",
+    "pretty-quick": "^4.0.0",
+    "react-scripts": "^5.0.1",
+    "rollup": "^4.12.1",
+    "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-ignore-import": "^1.3.2",
-    "rollup-plugin-node-externals": "^4.0.0",
-    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-node-externals": "^7.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-size-snapshot": "^0.12.0",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2",
-    "rollup-plugin-visualizer": "^5.5.4",
+    "rollup-plugin-typescript-paths": "^1.5.0",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "rollup-pluginutils": "^2.8.2",
-    "sass": "^1.49.7",
-    "typescript": "4.6.3"
+    "storybook": "^7.6.17",
+    "typescript": "^5.4.2"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@hot-loader/react-dom": "^17.0.2",
-    "antd": "^4.20.6",
-    "classnames": "^2.3.1",
+    "@ant-design/icons": "^5.3.1",
+    "antd": "^5.15.1",
+    "classnames": "^2.5.1",
     "lodash-es": "^4.17.21",
-    "miragejs": "^0.1.43",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0"
+    "miragejs": "^0.1.48",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "antd": "*",
-    "@ant-design/icons": "*",
-    "lodash-es": "*",
-    "classnames": "*"
-  }
+    "@ant-design/icons": "^5.3.1",
+    "antd": "^5.15.1",
+    "classnames": "^2.5.1",
+    "lodash-es": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "packageManager": "yarn@4.1.1"
 }
