--- a/example/package.json
+++ b/example/package.json
@@ -4,33 +4,30 @@
   "private": true,
   "main": "webpack.config.js",
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.6.0",
+    "css-loader": "^6.10.0",
     "html-webpack-harddisk-plugin": "^2.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.0",
-    "ts-loader": "^9.2.8",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.3",
-    "webpack-merge": "^5.8.0"
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "^17.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-fake-api": "^0.1.0",
-    "react-hot-loader": "^4.13.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-fake-api": "^1.1.0"
   },
   "scripts": {
     "start": "webpack-dev-server --mode=development"
   },
   "browserslist": "> 0.25%, not dead",
-  "author": "opossum4eg@gmail.com",
   "license": "ISC"
 }
