--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,8 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.10.0",
